--- a/style.css
+++ b/style.css
@@ -86,7 +86,9 @@ body {
 }
 
 .categories p:hover {
-    color: lightgrey;
+    transition: 1s;
+    background-color: transparent;
+    color: purple
 }
 
 .Section-image{
@@ -198,5 +200,21 @@ background-color: lightgray;
     width: 35%;
     border: black 2px solid;
     padding: 2%;
+    animation-name: zoom;
+    animation-duration: 2s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+}
+
+@keyframes zoom {
+    0%{
+        transform: scale(0);
+        opacity: 0;
+    }
+    100%{
+        transform: scale(1);
+        opacity: 1;
+    }
+    
 }
 
